--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "18.3.0",
     "apexcharts": "4.5.0",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "eslint": "9.21.0",
     "eslint-config-next": "15.2.0",
     "lodash": "4.17.21",
